welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:3: error: not found: value andy
    if ((2*tea<andy)||(2*candy<tea)) {return 2} else {
               ^